--- a/views/drop/index.haml
+++ b/views/drop/index.haml
@@ -1,7 +1,7 @@
 %div.container
   %div.page-header
     %h1 掉落统计
-  %div.col-xs-12.col-lg-6
+  %div.col-xs-12.col-md-6
     %div.panel-group
       %div.panel.panel-primary
         %div.panel-heading
@@ -24,145 +24,169 @@
               %a{:href => "#area31", :"data-toggle" => "tab"} 反撃！第二次SN作戦
             %li
               %a{:href => "#area32", :"data-toggle" => "tab"} 突入！海上輸送作戦
-          %div.tab-content
+          %div.tab-content.top15
             %div#area1.tab-pane.active
-              %div.col-xs-12.text-center
+              %div.col-xs-12
                 %div.row
-                  %a{:href => "/drop/map/鎮守府正面海域.html"}
-                    %img{:src => kcwiki_get_thumb("MapBanner1-1.png", size: 250, protocol: "http")}
-                  %a{:href => "/drop/map/南西諸島沖.html"}
-                    %img{:src => kcwiki_get_thumb("MapBanner1-2.png", size: 250, protocol: "http")}
+                  %div.col-xs-6.col-no-padding
+                    %a{:href => "/drop/map/鎮守府正面海域.html"}
+                      %img.img-responsive.block-center{:src => kcwiki_get_thumb("MapBanner1-1.png", size: 250, protocol: "http")}
+                  %div.col-xs-6.col-no-padding
+                    %a{:href => "/drop/map/南西諸島沖.html"}
+                      %img.img-responsive.block-center{:src => kcwiki_get_thumb("MapBanner1-2.png", size: 250, protocol: "http")}
                 %div.row
-                  %a{:href => "/drop/map/製油所地帯沿岸.html"}
-                    %img{:src => kcwiki_get_thumb("MapBanner1-3.png", size: 250, protocol: "http")}
-                  %a{:href => "/drop/map/南西諸島防衛線.html"}
-                    %img{:src => kcwiki_get_thumb("MapBanner1-4.png", size: 250, protocol: "http")}
+                  %div.col-xs-6.col-no-padding
+                    %a{:href => "/drop/map/製油所地帯沿岸.html"}
+                      %img.img-responsive.block-center{:src => kcwiki_get_thumb("MapBanner1-3.png", size: 250, protocol: "http")}
+                  %div.col-xs-6.col-no-padding
+                    %a{:href => "/drop/map/南西諸島防衛線.html"}
+                      %img.img-responsive.block-center{:src => kcwiki_get_thumb("MapBanner1-4.png", size: 250, protocol: "http")}
                 %div.row
                   %a{:href => "/drop/map/鎮守府近海.html"}
-                    %img{:src => kcwiki_get_thumb("MapBanner1-5.png", size: 500, protocol: "http")}
+                    %img.img-responsive.block-center{:src => kcwiki_get_thumb("MapBanner1-5.png", size: 500, protocol: "http")}
                 %div.row
                   %a{:href => "/drop/map/鎮守府近海航路.html"}
-                    %img{:src => kcwiki_get_thumb("MapBanner1-6.png", size: 500, protocol: "http")}
+                    %img.img-responsive.block-center{:src => kcwiki_get_thumb("MapBanner1-6.png", size: 500, protocol: "http")}
             %div#area2.tab-pane
-              %div.col-xs-12.text-center
+              %div.col-xs-12
                 %div.row
-                  %a{:href => "/drop/map/カムラン半島.html"}
-                    %img{:src => kcwiki_get_thumb("MapBanner2-1.png", size: 250, protocol: "http")}
-                  %a{:href => "/drop/map/バシー島沖.html"}
-                    %img{:src => kcwiki_get_thumb("MapBanner2-2.png", size: 250, protocol: "http")}
+                  %div.col-xs-6.col-no-padding
+                    %a{:href => "/drop/map/カムラン半島.html"}
+                      %img.img-responsive.block-center{:src => kcwiki_get_thumb("MapBanner2-1.png", size: 250, protocol: "http")}
+                  %div.col-xs-6.col-no-padding
+                    %a{:href => "/drop/map/バシー島沖.html"}
+                      %img.img-responsive.block-center{:src => kcwiki_get_thumb("MapBanner2-2.png", size: 250, protocol: "http")}
                 %div.row
-                  %a{:href => "/drop/map/東部オリョール海.html"}
-                    %img{:src => kcwiki_get_thumb("MapBanner2-3.png", size: 250, protocol: "http")}
-                  %a{:href => "/drop/map/沖ノ島海域.html"}
-                    %img{:src => kcwiki_get_thumb("MapBanner2-4.png", size: 250, protocol: "http")}
+                  %div.col-xs-6.col-no-padding
+                    %a{:href => "/drop/map/東部オリョール海.html"}
+                      %img.img-responsive.block-center{:src => kcwiki_get_thumb("MapBanner2-3.png", size: 250, protocol: "http")}
+                  %div.col-xs-6.col-no-padding
+                    %a{:href => "/drop/map/沖ノ島海域.html"}
+                      %img.img-responsive.block-center{:src => kcwiki_get_thumb("MapBanner2-4.png", size: 250, protocol: "http")}
                 %div.row
                   %a{:href => "/drop/map/沖ノ島沖.html"}
-                    %img{:src => kcwiki_get_thumb("MapBanner2-5.png", size: 500, protocol: "http")}
+                    %img.img-responsive.block-center{:src => kcwiki_get_thumb("MapBanner2-5.png", size: 500, protocol: "http")}
                 %div.row
-                  %img{:src => kcwiki_get_thumb("MapBanner0-5.png", size: 500, protocol: "http")}
+                  %img.img-responsive.block-center{:src => kcwiki_get_thumb("MapBanner0-5.png", size: 500, protocol: "http")}
             %div#area3.tab-pane
-              %div.col-xs-12.text-center
+              %div.col-xs-12
                 %div.row
-                  %a{:href => "/drop/map/モーレイ海.html"}
-                    %img{:src => kcwiki_get_thumb("MapBanner3-1.png", size: 250, protocol: "http")}
-                  %a{:href => "/drop/map/キス島沖.html"}
-                    %img{:src => kcwiki_get_thumb("MapBanner3-2.png", size: 250, protocol: "http")}
+                  %div.col-xs-6.col-no-padding
+                    %a{:href => "/drop/map/モーレイ海.html"}
+                      %img.img-responsive.block-center{:src => kcwiki_get_thumb("MapBanner3-1.png", size: 250, protocol: "http")}
+                  %div.col-xs-6.col-no-padding
+                    %a{:href => "/drop/map/キス島沖.html"}
+                      %img.img-responsive.block-center{:src => kcwiki_get_thumb("MapBanner3-2.png", size: 250, protocol: "http")}
                 %div.row
-                  %a{:href => "/drop/map/アルフォンシーノ方面.html"}
-                    %img{:src => kcwiki_get_thumb("MapBanner3-3.png", size: 250, protocol: "http")}
-                  %a{:href => "/drop/map/北方海域全域.html"}
-                    %img{:src => kcwiki_get_thumb("MapBanner3-4.png", size: 250, protocol: "http")}
+                  %div.col-xs-6.col-no-padding
+                    %a{:href => "/drop/map/アルフォンシーノ方面.html"}
+                      %img.img-responsive.block-center{:src => kcwiki_get_thumb("MapBanner3-3.png", size: 250, protocol: "http")}
+                  %div.col-xs-6.col-no-padding
+                    %a{:href => "/drop/map/北方海域全域.html"}
+                      %img.img-responsive.block-center{:src => kcwiki_get_thumb("MapBanner3-4.png", size: 250, protocol: "http")}
                 %div.row
                   %a{:href => "/drop/map/北方AL海域.html"}
-                    %img{:src => kcwiki_get_thumb("MapBanner3-5.png", size: 500, protocol: "http")}
+                    %img.img-responsive.block-center{:src => kcwiki_get_thumb("MapBanner3-5.png", size: 500, protocol: "http")}
                 %div.row
-                  %img{:src => kcwiki_get_thumb("MapBanner0-5.png", size: 500, protocol: "http")}
+                  %img.img-responsive.block-center{:src => kcwiki_get_thumb("MapBanner0-5.png", size: 500, protocol: "http")}
             %div#area4.tab-pane
-              %div.col-xs-12.text-center
+              %div.col-xs-12
                 %div.row
-                  %a{:href => "/drop/map/ジャム島攻略作戦.html"}
-                    %img{:src => kcwiki_get_thumb("MapBanner4-1.png", size: 250, protocol: "http")}
-                  %a{:href => "/drop/map/カレー洋制圧戦.html"}
-                    %img{:src => kcwiki_get_thumb("MapBanner4-2.png", size: 250, protocol: "http")}
+                  %div.col-xs-6.col-no-padding
+                    %a{:href => "/drop/map/ジャム島攻略作戦.html"}
+                      %img.img-responsive.block-center{:src => kcwiki_get_thumb("MapBanner4-1.png", size: 250, protocol: "http")}
+                  %div.col-xs-6.col-no-padding
+                    %a{:href => "/drop/map/カレー洋制圧戦.html"}
+                      %img.img-responsive.block-center{:src => kcwiki_get_thumb("MapBanner4-2.png", size: 250, protocol: "http")}
                 %div.row
-                  %a{:href => "/drop/map/リランカ島空襲.html"}
-                    %img{:src => kcwiki_get_thumb("MapBanner4-3.png", size: 250, protocol: "http")}
-                  %a{:href => "/drop/map/カスガダマ沖海戦.html"}
-                    %img{:src => kcwiki_get_thumb("MapBanner4-4.png", size: 250, protocol: "http")}
+                  %div.col-xs-6.col-no-padding
+                    %a{:href => "/drop/map/リランカ島空襲.html"}
+                      %img.img-responsive.block-center{:src => kcwiki_get_thumb("MapBanner4-3.png", size: 250, protocol: "http")}
+                  %div.col-xs-6.col-no-padding
+                    %a{:href => "/drop/map/カスガダマ沖海戦.html"}
+                      %img.img-responsive.block-center{:src => kcwiki_get_thumb("MapBanner4-4.png", size: 250, protocol: "http")}
                 %div.row
                   %a{:href => "/drop/map/カレー洋リランカ島沖.html"}
-                    %img{:src => kcwiki_get_thumb("MapBanner4-5.png", size: 500, protocol: "http")}
+                    %img.img-responsive.block-center{:src => kcwiki_get_thumb("MapBanner4-5.png", size: 500, protocol: "http")}
                 %div.row
-                  %img{:src => kcwiki_get_thumb("MapBanner0-5.png", size: 500, protocol: "http")}
+                  %img.img-responsive.block-center{:src => kcwiki_get_thumb("MapBanner0-5.png", size: 500, protocol: "http")}
             %div#area5.tab-pane
-              %div.col-xs-12.text-center
+              %div.col-xs-12
                 %div.row
-                  %a{:href => "/drop/map/南方海域前面.html"}
-                    %img{:src => kcwiki_get_thumb("MapBanner5-1.png", size: 250, protocol: "http")}
-                  %a{:href => "/drop/map/珊瑚諸島沖.html"}
-                    %img{:src => kcwiki_get_thumb("MapBanner5-2.png", size: 250, protocol: "http")}
+                  %div.col-xs-6.col-no-padding
+                    %a{:href => "/drop/map/南方海域前面.html"}
+                      %img.img-responsive.block-center{:src => kcwiki_get_thumb("MapBanner5-1.png", size: 250, protocol: "http")}
+                  %div.col-xs-6.col-no-padding
+                    %a{:href => "/drop/map/珊瑚諸島沖.html"}
+                      %img.img-responsive.block-center{:src => kcwiki_get_thumb("MapBanner5-2.png", size: 250, protocol: "http")}
                 %div.row
-                  %a{:href => "/drop/map/サブ島沖海域.html"}
-                    %img{:src => kcwiki_get_thumb("MapBanner5-3.png", size: 250, protocol: "http")}
-                  %a{:href => "/drop/map/サーモン海域.html"}
-                    %img{:src => kcwiki_get_thumb("MapBanner5-4.png", size: 250, protocol: "http")}
+                  %div.col-xs-6.col-no-padding
+                    %a{:href => "/drop/map/サブ島沖海域.html"}
+                      %img.img-responsive.block-center{:src => kcwiki_get_thumb("MapBanner5-3.png", size: 250, protocol: "http")}
+                  %div.col-xs-6.col-no-padding
+                    %a{:href => "/drop/map/サーモン海域.html"}
+                      %img.img-responsive.block-center{:src => kcwiki_get_thumb("MapBanner5-4.png", size: 250, protocol: "http")}
                 %div.row
                   %a{:href => "/drop/map/サーモン海域北方.html"}
-                    %img{:src => kcwiki_get_thumb("MapBanner5-5.png", size: 500, protocol: "http")}
+                    %img.img-responsive.block-center{:src => kcwiki_get_thumb("MapBanner5-5.png", size: 500, protocol: "http")}
                 %div.row
-                  %img{:src => kcwiki_get_thumb("MapBanner0-5.png", size: 500, protocol: "http")}
+                  %img.img-responsive.block-center{:src => kcwiki_get_thumb("MapBanner0-5.png", size: 500, protocol: "http")}
             %div#area6.tab-pane
-              %div.col-xs-12.text-center
+              %div.col-xs-12
                 %div.row
-                  %a{:href => "/drop/map/中部海域哨戒線.html"}
-                    %img{:src => kcwiki_get_thumb("MapBanner6-1.png", size: 250, protocol: "http")}
-                  %a{:href => "/drop/map/MS諸島沖.html"}
-                    %img{:src => kcwiki_get_thumb("MapBanner6-2.png", size: 250, protocol: "http")}
+                  %div.col-xs-6.col-no-padding
+                    %a{:href => "/drop/map/中部海域哨戒線.html"}
+                      %img.img-responsive.block-center{:src => kcwiki_get_thumb("MapBanner6-1.png", size: 250, protocol: "http")}
+                  %div.col-xs-6.col-no-padding
+                    %a{:href => "/drop/map/MS諸島沖.html"}
+                      %img.img-responsive.block-center{:src => kcwiki_get_thumb("MapBanner6-2.png", size: 250, protocol: "http")}
                 %div.row
-                  %a{:href => "/drop/map/グアノ環礁沖海域.html"}
-                    %img{:src => kcwiki_get_thumb("MapBanner6-3.png", size: 250, protocol: "http")}
-                  %img{:src => kcwiki_get_thumb("MapBanner0-0.png", size: 250, protocol: "http")}
+                  %div.col-xs-6.col-no-padding
+                    %a{:href => "/drop/map/グアノ環礁沖海域.html"}
+                      %img.img-responsive.block-center{:src => kcwiki_get_thumb("MapBanner6-3.png", size: 250, protocol: "http")}
+                  %div.col-xs-6.col-no-padding
+                    %img.img-responsive.block-center{:src => kcwiki_get_thumb("MapBanner0-0.png", size: 250, protocol: "http")}
             %div#area31.tab-pane
-              %div.col-xs-12.text-center
+              %div.col-xs-12
                 %div.row
                   %a{:href => "/drop/map/ショートランド沖.html"}
-                    %img{:src => kcwiki_get_file("MapBannerE-1Summer2015.png", protocol: "http")}
+                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerE-1Summer2015.png", protocol: "http")}
                 %div.row
                   %a{:href => "/drop/map/ソロモン海.html"}
-                    %img{:src => kcwiki_get_file("MapBannerE-2Summer2015.png", protocol: "http")}
+                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerE-2Summer2015.png", protocol: "http")}
                 %div.row
                   %a{:href => "/drop/map/南太平洋海域.html"}
-                    %img{:src => kcwiki_get_file("MapBannerE-3Summer2015.png", protocol: "http")}
+                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerE-3Summer2015.png", protocol: "http")}
                 %div.row
                   %a{:href => "/drop/map/アイアンボトムサウンド.html"}
-                    %img{:src => kcwiki_get_file("MapBannerE-4Summer2015.png", protocol: "http")}
+                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerE-4Summer2015.png", protocol: "http")}
                 %div.row
                   %a{:href => "/drop/map/西方海域戦線 カレー洋.html"}
-                    %img{:src => kcwiki_get_file("MapBannerE-5Summer2015.png", protocol: "http")}
+                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerE-5Summer2015.png", protocol: "http")}
                 %div.row
                   %a{:href => "/drop/map/ソロモン海東部海域.html"}
-                    %img{:src => kcwiki_get_file("MapBannerE-6Summer2015.png", protocol: "http")}
+                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerE-6Summer2015.png", protocol: "http")}
                 %div.row
                   %a{:href => "/drop/map/FS方面海域.html"}
-                    %img{:src => kcwiki_get_file("MapBannerE-7Summer2015.png", protocol: "http")}
+                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerE-7Summer2015.png", protocol: "http")}
             %div#area32.tab-pane
-              %div.col-xs-12.text-center
+              %div.col-xs-12
                 %div.row
                   %a{:href => "/drop/map/ショートランド泊地沖.html"}
-                    %img{:src => kcwiki_get_file("MapBannerE-1Autumn2015.png", protocol: "http")}
+                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerE-1Autumn2015.png", protocol: "http")}
                 %div.row
                   %a{:href => "/drop/map/コロネハイカラ島沖.html"}
-                    %img{:src => kcwiki_get_file("MapBannerE-2Autumn2015.png", protocol: "http")}
+                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerE-2Autumn2015.png", protocol: "http")}
                 %div.row
                   %a{:href => "/drop/map/コロネハイカラ島東方沖.html"}
-                    %img{:src => kcwiki_get_file("MapBannerE-3Autumn2015.png", protocol: "http")}
+                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerE-3Autumn2015.png", protocol: "http")}
                 %div.row
                   %a{:href => "/drop/map/西方海域戦線 ステビア海.html"}
-                    %img{:src => kcwiki_get_file("MapBannerE-4Autumn2015.png", protocol: "http")}
+                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerE-4Autumn2015.png", protocol: "http")}
                 %div.row
                   %a{:href => "/drop/map/バニラ湾沖.html"}
-                    %img{:src => kcwiki_get_file("MapBannerE-5Autumn2015.png", protocol: "http")}
-  %div.col-xs-12.col-lg-6
+                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerE-5Autumn2015.png", protocol: "http")}
+  %div.col-xs-12.col-md-6
     %div.panel-group
       %div.panel.panel-primary
         %div.panel-heading
