--- a/views/drop/map/query.haml
+++ b/views/drop/map/query.haml
@@ -7,76 +7,94 @@
       %ol.breadcrumb
         %li 主页
         %li 掉落
-        %li= KCConstants.areas[map_id / 10]
-        %li= KCConstants.maps[map_id]
-      %ul#cells.nav.nav-pills{:role => "tablist"}
-        - enemy_hash = KCConstants.cells[map_id].invert
-        - enemy_hash.each do |c_name, c_id|
-          %li{:role => "presentation", :class => c_name.include?("(Boss)") ? "active" : nil}
-            %a{:"aria-controls" => "point#{c_id}",
-               :"data-toggle" => "pill",
-               :href => "#point#{c_id}",
-               :role => "tab"}= c_name
-      %div
-        %img.drop-map{:src => SiteConstants.map_images[map_id]}
-      %div.tab-content.hidden
-        - enemy_hash.each do |c_name, c_id|
-          %div{:class => "tab-pane#{c_name.include?("(Boss)") ? " active" : ""}",
-               :id => "point#{c_id}",
-               :role => "tabpanel"}
-            %div{:id => "toolbar#{c_id}"}
-              %div.toolbar-content
-                %span= "最后更新时间: #{Time.now}"
-            %table.table.table-hover.table-striped{:"data-eneny-name" => c_name,
-                                                   :"data-sort-name" => "dropRate",
-                                                   :"data-toolbar" => "#toolbar#{c_id}",
-                                                   :"data-search" => "true",
-                                                   :"data-show-columns" => "true",
-                                                   :"data-show-export" => "true",
-                                                   :"data-detail-view" => "true",
-                                                   :"data-detail-formatter" => "detailFormatter"}
-              %thead
-                %tr
-                  %th{:"data-field" => "name",
-                      :"data-formatter" => "nameFormatter",
-                      :"data-switchable" => "false"} 舰娘
-                  %th{:"data-field" => "type",
-                      :"data-sortable" => "true"} 舰种
-                  %th{:"data-field" => "totalCount"} 数量
-                  %th{:"data-field" => "sTotalCount",
-                      :"data-sortable" => "true"} S胜
-                  %th{:"data-field" => "aTotalCount",
-                      :"data-sortable" => "true"} A胜
-                  %th{:"data-field" => "bTotalCount",
-                      :"data-sortable" => "true"} B胜
-                  %th{:"data-field" => "hqLvRange"} 提督等级
-                  %th{:"data-field" => "dropRate",
-                      :"data-formatter" => "dropRateFormatter",
-                      :"data-sortable" => "true"} 掉落率
-      %div.busy-indicator
-        %span.glyphicon.glyphicon-refresh.glyphicon-spin
-        %span 少女祈祷中...
+        %li= KanColleConstant.area[area_id][:name]
+        %li= KanColleConstant.map[map_id][:name]
+      %div.row
+        %div.col-xs-12.col-md-4
+          %div
+            %b 最后更新时间:
+          %div#cache-time.text-right
+          %div
+            %b 查询结果总数:
+          %div#query-count.text-right
+          %div
+            %b 战斗点:
+          %ul.nav.nav-pills
+            - KanColleConstant.map[map_id][:cells].each do |c|
+              %li{:role => "presentation", :class => c[:point] == point_id ? "active" : nil}
+                %a{:href => "/drop/map/#{map_id}/#{c[:point]}#{params[:level_no].nil? ? '' : "-#{level_no}"}-#{rank}.html"}= "#{c[:point]}#{c[:boss] ? " (Boss)" : ""}"
+          %div
+            %b 评价:
+          %ul.nav.nav-pills
+            - ['SAB', 'SA', 'S', 'A', 'B'].each do |r|
+              %li{:role => "presentation", :class => r == rank ? "active" : nil}
+                %a{:href => "/drop/map/#{map_id}/#{point_id}#{params[:level_no].nil? ? '' : "-#{level_no}"}-#{r}.html"}= r
+          - if KanColleConstant.area[area_id][:event]
+            %div
+              %b 难度:
+            %ul.nav.nav-pills
+              - ['甲', '乙', '丙'].each_with_index do |l, idx|
+                %li{:role => "presentation", :class => idx == 3 - level_no ? "active" : nil}
+                  %a{:href => "/drop/map/#{map_id}/#{point_id}-#{3 - idx}-#{rank}.html"}= l
+        %div.col-xs-12.col-md-8
+          %img.img-responsive{:src => kcwiki_get_thumb(KanColleConstant.map[map_id][:map], size: 600, protocol: "http")}
+      %div.row.top10
+        %div#toolbar
+        %table.table.table-hover.table-striped{:"data-sort-name" => "dropRate",
+                                               :"data-toolbar" => "#toolbar",
+                                               :"data-search" => "true",
+                                               :"data-show-columns" => "true",
+                                               :"data-show-export" => "true",
+                                               :"data-detail-view" => "true",
+                                               :"data-detail-formatter" => "detailFormatter"}
+          %thead
+            %tr
+              %th{:"data-field" => "name",
+                  :"data-formatter" => "nameFormatter",
+                  :"data-switchable" => "false"} 舰娘
+              %th{:"data-field" => "type",
+                  :"data-sortable" => "true"} 舰种
+              %th{:"data-field" => "totalCount",
+                  :"data-sortable" => "true"} 数量
+              %th{:"data-field" => "sCount",
+                  :"data-visible" => rank.length > 1 && rank.include?('S') ? "true" : "false",
+                  :"data-sortable" => "true"} S胜
+              %th{:"data-field" => "aCount",
+                  :"data-visible" => rank.length > 1 && rank.include?('A') ? "true" : "false",
+                  :"data-sortable" => "true"} A胜
+              %th{:"data-field" => "bCount",
+                  :"data-visible" => rank.length > 1 && rank.include?('B') ? "true" : "false",
+                  :"data-sortable" => "true"} B胜
+              %th{:"data-field" => "hqLvRange"} 提督等级
+              %th{:"data-field" => "dropRate",
+                  :"data-formatter" => "dropRateFormatter",
+                  :"data-sortable" => "true"} 掉落率
     %div#sidebar.class.col-xs-6.col-sm-3.sidebar-offcanvas
       %div#accordion.panel-group
-        - KCConstants.areas.each do |a_id, a_name|
+        - KanColleConstant.area.each do |a_id, a_obj|
           %div.panel.panel-default
             %div.panel-heading
               %h4.panel-title
                 %a{:"data-toggle" => "collapse",
                    :"data-parent" => "#accordion",
-                   :href => "#map#{a_id}"}= "#{a_name} (#{a_id})"
+                   :href => "#map#{a_id}"}= "#{a_obj[:name]} (#{a_id})"
             %div{:id => "map#{a_id}",
-                 :class => "panel-collapse collapse #{map_id / 10 == a_id ? ' in' : ''}"}
+                 :class => "panel-collapse collapse#{area_id == a_id ? ' in' : ''}"}
               %div.list-group
-                - KCConstants.maps.select{|k, v| k / 10 == a_id}.each do |m_id, m_name|
+                - KanColleConstant.area[a_id][:maps].each do |m_id|
                   %a{:class => "list-group-item#{map_id == m_id ? ' active' : ''}",
-                     :href => "/drop/map/#{m_name}.html"}= "#{m_name} (#{m_id / 10}-#{m_id % 10})"
-%script{:src => "/scripts/drop_map.js", :defer => "defer"}
-%script{:defer => "defer"}
+                     :href => "/drop/map/#{m_id}/"}= "#{KanColleConstant.map[m_id][:name]} (#{m_id.to_s.insert(-2, '-')})"
+%script{:src => "/scripts/drop/constant.js"}
+%script
   :plain
-    $(document).ready(function() {
-      requestData("#{KCConstants.maps[map_id]}");
-    });
+    window.queryData = {
+      "mapId": #{map_id},
+      "pointId": "#{point_id}",
+      "rank": "#{rank}",
+      "levelNo": #{params[:level_no] || 0}
+    };
+    window.dropData = #{query_data};
+%script{:src => "/scripts/drop/map.js"}
 =haml :duoshuo, :locals => { :key => "drop/map/#{map_id}",
-                             :title => "掉落统计##{KCConstants.maps[map_id]}",
-                             :url => "http://db.kcwiki.moe/drop/map/#{KCConstants.maps[map_id]}.html" }
+                             :title => "掉落统计##{KanColleConstant.map[map_id][:name]}",
+                             :url => "http://db.kcwiki.moe/drop/map/#{map_id}/#{point_id}#{params[:level_no].nil? ? '' : "-#{level_no}"}-#{rank}.html" }
