add 2016 winter event

--- a/views/navbar.haml
+++ b/views/navbar.haml
@@ -17,7 +17,7 @@
         %li{:class => locals[:location] == "drop" ? "active" : nil}
           %a{:href => "/drop/"} 掉落统计
         %li{:class => locals[:location] == "event" ? "active" : nil}
-          %a{:href => "/event-christmas2015/"} 活动统计(圣诞节)
+          %a{:href => "/event-winter2016/"} 活动统计(冬活)
         %li
           %a{:href => "http://zh.kcwiki.moe/"} 舰娘百科
         %li{:class => locals[:location] == "about" ? "active" : nil}
