--- a/views/drop/index.haml
+++ b/views/drop/index.haml
@@ -24,6 +24,8 @@
               %a{:href => "#area31", :"data-toggle" => "tab"} 反撃！第二次SN作戦
             %li
               %a{:href => "#area32", :"data-toggle" => "tab"} 突入！海上輸送作戦
+            %li
+              %a{:href => "#area33", :"data-toggle" => "tab"} 出撃！礼号作戦
           %div.tab-content.top15
             %div#area1.tab-pane.active
               %div.col-xs-12
@@ -186,6 +188,17 @@
                 %div.row
                   %a{:href => "/drop/map/バニラ湾沖.html"}
                     %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerE-5Autumn2015.png", protocol: "http")}
+            %div#area33.tab-pane
+              %div.col-xs-12
+                %div.row
+                  %a{:href => "/drop/map/331/"}
+                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerE-1Winter2016.png", protocol: "http")}
+                %div.row
+                  %a{:href => "/drop/map/332/"}
+                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerE-2Winter2016.png", protocol: "http")}
+                %div.row
+                  %a{:href => "/drop/map/333/"}
+                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerE-3Winter2016.png", protocol: "http")}
   %div.col-xs-12.col-md-6
     %div.panel-group
       %div.panel.panel-primary
