--- a/views/navbar.haml
+++ b/views/navbar.haml
@@ -12,8 +12,8 @@
       %a.navbar-brand{:href => "/"} poi-statistics
     %div#navbar-main.navbar-collapse.collapse
       %ul.nav.navbar-nav
-        %li{:class => locals[:location] == "construction" ? "active" : nil}
-          %a{:href => "#"} 建造统计(砍掉重练@_@)
+        %li{:class => locals[:location] == "development" ? "active" : nil}
+          %a{:href => "/development"} 开发统计
         %li{:class => locals[:location] == "drop" ? "active" : nil}
           %a{:href => "/drop/"} 掉落统计
         %li{:class => locals[:location] == "event" ? "active" : nil}
