add 2016 spring event

--- a/views/drop/index.haml
+++ b/views/drop/index.haml
@@ -26,6 +26,8 @@
               %a{:href => "#area32", :"data-toggle" => "tab"} 突入！海上輸送作戦
             %li
               %a{:href => "#area33", :"data-toggle" => "tab"} 出撃！礼号作戦
+            %li
+              %a{:href => "#area34", :"data-toggle" => "tab"} 開設！基地航空隊
           %div.tab-content.top15
             %div#area1.tab-pane.active
               %div.col-xs-12
@@ -199,6 +201,29 @@
                 %div.row
                   %a{:href => "/drop/map/333/"}
                     %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerE-3Winter2016.png", protocol: "http")}
+            %div#area34.tab-pane
+              %div.col-xs-12
+                %div.row
+                  %a{:href => "/drop/map/341/"}
+                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerE-1Spring2016.png", protocol: "http")}
+                %div.row
+                  %a{:href => "/drop/map/342/"}
+                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerE-2Spring2016.png", protocol: "http")}
+                %div.row
+                  %a{:href => "/drop/map/343/"}
+                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerE-3Spring2016.png", protocol: "http")}
+                %div.row
+                  %a{:href => "/drop/map/344/"}
+                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerE-4Spring2016.png", protocol: "http")}
+                %div.row
+                  %a{:href => "/drop/map/345/"}
+                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerE-5Spring2016.png", protocol: "http")}
+                %div.row
+                  %a{:href => "/drop/map/346/"}
+                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerE-6Spring2016.png", protocol: "http")}
+                %div.row
+                  %a{:href => "/drop/map/347/"}
+                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerE-7Spring2016.png", protocol: "http")}
   %div.col-xs-12.col-md-6
     %div.panel-group
       %div.panel.panel-primary
