--- a/views/layout.haml
+++ b/views/layout.haml
@@ -4,7 +4,7 @@
     %meta{:charset => "utf-8"}
     %meta{:"http-equiv" => "X-UA-Compatiable", :content => "IE=edge"}
     %meta{:name => "viewport", :content => "width=device-width, initial-scale=1"}
-    %title= "poi-statistics @ 舰娘百科 × Poi#{locals[:title_append] || ''}"
+    %title= "poi-statistics @ 舰娘百科 × poi#{locals[:title_append] || ''}"
     %link{:href => "//cdn.bootcss.com/bootstrap/3.3.6/css/bootstrap.min.css", :rel => "stylesheet"}
     %link{:href => "//cdn.bootcss.com/bootstrap-table/1.9.1/bootstrap-table.min.css", :rel => "stylesheet"}
     %link{:href => "/stylesheets/offcanvas.css", :rel => "stylesheet"}
