--- a/views/event-spring2016/query.haml
+++ b/views/event-spring2016/query.haml
@@ -32,15 +32,15 @@
             %div.row
               %div.col-xs-12.col-sm-3.top30
                 %div.well.well-lg
-                  %p= "总人数： #{data[:first][:chosen] + data[:second][:chosen] + data[:third][:chosen]}"
-                  %p= "甲级人数： #{data[:first][:chosen]}"
-                  %p= "乙级人数： #{data[:second][:chosen]}"
-                  %p= "丙级人数： #{data[:third][:chosen]}"
+                  %p= "总人数： #{data["first"]["chosen"] + data["second"]["chosen"] + data["third"]["chosen"]}"
+                  %p= "甲级人数： #{data["first"]["chosen"]}"
+                  %p= "乙级人数： #{data["second"]["chosen"]}"
+                  %p= "丙级人数： #{data["third"]["chosen"]}"
                   %br
-                  %p= "总通关人数： #{data[:first][:passed] + data[:second][:passed] + data[:third][:passed]}"
-                  %p= "甲级通关人数： #{data[:first][:passed]}"
-                  %p= "乙级通关人数： #{data[:second][:passed]}"
-                  %p= "丙级通关人数： #{data[:third][:passed]}"
+                  %p= "总通关人数： #{data["first"]["passed"] + data["second"]["passed"] + data["third"]["passed"]}"
+                  %p= "甲级通关人数： #{data["first"]["passed"]}"
+                  %p= "乙级通关人数： #{data["second"]["passed"]}"
+                  %p= "丙级通关人数： #{data["third"]["passed"]}"
               %div.col-xs-12.col-sm-9
                 %div#chart01.col-xs-6.ct-chart
                 %div#chart02.col-xs-6.ct-chart
@@ -48,11 +48,11 @@
             %div.row
               %div.col-xs-12.col-sm-3.top30
                 %div.well.well-lg
-                  %p= "总人数： #{data[:first][:chosen]}"
-                  %p= "通关人数： #{data[:first][:passed]}"
-                  %p= "通关等级： #{data[:first][:hqLvMin]} ~ #{data[:first][:hqLvMax]}"
-                  %p= "总出击次数： #{data[:first][:battleTotal]}"
-                  %p= "Boss胜利次数： #{data[:first][:battleBoss]}"
+                  %p= "总人数： #{data["first"]["chosen"]}"
+                  %p= "通关人数： #{data["first"]["passed"]}"
+                  %p= "通关等级： #{data["first"]["hqLvMin"]} ~ #{data["first"]["hqLvMax"]}"
+                  %p= "总出击次数： #{data["first"]["battleTotal"]}"
+                  %p= "Boss胜利次数： #{data["first"]["battleBoss"]}"
               %div.col-xs-12.col-sm-9
                 %div#chart11.col-xs-6.ct-chart
                 %div#chart12.col-xs-6.ct-chart
@@ -60,11 +60,11 @@
             %div.row
               %div.col-xs-12.col-sm-3.top30
                 %div.well.well-lg
-                  %p= "总人数： #{data[:second][:chosen]}"
-                  %p= "通关人数： #{data[:second][:passed]}"
-                  %p= "通关等级： #{data[:second][:hqLvMin]} ~ #{data[:second][:hqLvMax]}"
-                  %p= "总出击次数： #{data[:second][:battleTotal]}"
-                  %p= "Boss胜利次数： #{data[:second][:battleBoss]}"
+                  %p= "总人数： #{data["second"]["chosen"]}"
+                  %p= "通关人数： #{data["second"]["passed"]}"
+                  %p= "通关等级： #{data["second"]["hqLvMin"]} ~ #{data["second"]["hqLvMax"]}"
+                  %p= "总出击次数： #{data["second"]["battleTotal"]}"
+                  %p= "Boss胜利次数： #{data["second"]["battleBoss"]}"
               %div.col-xs-12.col-sm-9
                 %div#chart21.col-xs-6.ct-chart
                 %div#chart22.col-xs-6.ct-chart
@@ -72,11 +72,11 @@
             %div.row
               %div.col-xs-12.col-sm-3.top30
                 %div.well.well-lg
-                  %p= "总人数： #{data[:third][:chosen]}"
-                  %p= "通关人数： #{data[:third][:passed]}"
-                  %p= "通关等级： #{data[:third][:hqLvMin]} ~ #{data[:third][:hqLvMax]}"
-                  %p= "总出击次数： #{data[:third][:battleTotal]}"
-                  %p= "Boss胜利次数： #{data[:third][:battleBoss]}"
+                  %p= "总人数： #{data["third"]["chosen"]}"
+                  %p= "通关人数： #{data["third"]["passed"]}"
+                  %p= "通关等级： #{data["third"]["hqLvMin"]} ~ #{data["third"]["hqLvMax"]}"
+                  %p= "总出击次数： #{data["third"]["battleTotal"]}"
+                  %p= "Boss胜利次数： #{data["third"]["battleBoss"]}"
               %div.col-xs-12.col-sm-9
                 %div#chart31.col-xs-6.ct-chart
                 %div#chart32.col-xs-6.ct-chart
@@ -85,35 +85,35 @@
     var draw1 = false, draw2 = false, draw3 = false;
     var data01 = {
       labels: ['甲', '乙', '丙'],
-      series: [#{data[:first][:chosen]}, #{data[:second][:chosen]}, #{data[:third][:chosen]}]
+      series: [#{data["first"]["chosen"]}, #{data["second"]["chosen"]}, #{data["third"]["chosen"]}]
     };
     var data02 = {
       labels: ['甲(通关)', '乙(通关)', '丙(通关)'],
-      series: [#{data[:first][:passed]}, #{data[:second][:passed]}, #{data[:third][:passed]}]
+      series: [#{data["first"]["passed"]}, #{data["second"]["passed"]}, #{data["third"]["passed"]}]
     };
     var data11 = {
       labels: ['通关', '未通关'],
-      series: [#{data[:first][:passed]}, #{data[:first][:chosen] - data[:first][:passed]}]
+      series: [#{data["first"]["passed"]}, #{data["first"]["chosen"] - data["first"]["passed"]}]
     };
     var data12 = {
       labels: ['Boss胜利', '劝退'],
-      series: [#{data[:first][:battleBoss]}, #{data[:first][:battleTotal] - data[:first][:battleBoss]}]
+      series: [#{data["first"]["battleBoss"]}, #{data["first"]["battleTotal"] - data["first"]["battleBoss"]}]
     };
     var data21 = {
       labels: ['通关', '未通关'],
-      series: [#{data[:second][:passed]}, #{data[:second][:chosen] - data[:second][:passed]}]
+      series: [#{data["second"]["passed"]}, #{data["second"]["chosen"] - data["second"]["passed"]}]
     };
     var data22 = {
       labels: ['Boss胜利', '劝退'],
-      series: [#{data[:second][:battleBoss]}, #{data[:second][:battleTotal] - data[:second][:battleBoss]}]
+      series: [#{data["second"]["battleBoss"]}, #{data["second"]["battleTotal"] - data["second"]["battleBoss"]}]
     };
     var data31 = {
       labels: ['通关', '未通关'],
-      series: [#{data[:third][:passed]}, #{data[:third][:chosen] - data[:third][:passed]}]
+      series: [#{data["third"]["passed"]}, #{data["third"]["chosen"] - data["third"]["passed"]}]
     };
     var data32 = {
       labels: ['Boss胜利', '劝退'],
-      series: [#{data[:third][:battleBoss]}, #{data[:third][:battleTotal] - data[:third][:battleBoss]}]
+      series: [#{data["third"]["battleBoss"]}, #{data["third"]["battleTotal"] - data["third"]["battleBoss"]}]
     };
     var options = {
       height: 300,
