fix event page url

--- a/views/event-spring2016/index.haml
+++ b/views/event-spring2016/index.haml
@@ -3,7 +3,7 @@
     %h1 活动统计
   %ul.nav.nav-tabs
     %li.active{:role => "presentation"}
-      %a{:href => "/event-spring2016/index.html"} 进度
+      %a{:href => "/event-spring2016/"} 总
     - (1..7).each do |i|
       %li{:role => "presentation"}
         %a{:href => "/event-spring2016/34#{i}.html"}= "E#{i}"
