--- a/views/event-spring2016/query.haml
+++ b/views/event-spring2016/query.haml
@@ -3,7 +3,7 @@
     %h1 活动统计
   %ul.nav.nav-tabs
     %li{:role => "presentation"}
-      %a{:href => "/event-spring2016/index.html"} 总
+      %a{:href => "/event-spring2016/"} 总
     - (1..7).each do |i|
       %li{:role => "presentation",
           :class => i == map_id % 10 ? "active" : nil}
