Add 2016 summer event data

--- a/views/drop/index.haml
+++ b/views/drop/index.haml
@@ -28,8 +28,10 @@
               %a{:href => "#area33", :"data-toggle" => "tab"} 出撃！礼号作戦
             %li
               %a{:href => "#area34", :"data-toggle" => "tab"} 開設！基地航空隊
+            %li
+              %a{:href => "#area35", :"data-toggle" => "tab"} 迎撃！第二次マレー沖海戦
           %div.tab-content.top15
-            %div#area1.tab-pane.active
+            %div#area1.tab-pane
               %div.col-xs-12
                 %div.row
                   %div.col-xs-6.col-no-padding
@@ -224,6 +226,20 @@
                 %div.row
                   %a{:href => "/drop/map/347/"}
                     %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerE-7Spring2016.png", protocol: "http")}
+            %div#area35.tab-pane.active
+              %div.col-xs-12
+                %div.row
+                  %a{:href => "/drop/map/351/"}
+                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerE-1Summer2016.png", protocol: "http")}
+                %div.row
+                  %a{:href => "/drop/map/352/"}
+                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerE-2Summer2016.png", protocol: "http")}
+                %div.row
+                  %a{:href => "/drop/map/353/"}
+                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerE-3Summer2016.png", protocol: "http")}
+                %div.row
+                  %a{:href => "/drop/map/354/"}
+                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerE-4Summer2016.png", protocol: "http")}
   %div.col-xs-12.col-md-6
     %div.panel-group
       %div.panel.panel-primary
