--- a/views/drop/index.haml
+++ b/views/drop/index.haml
@@ -151,7 +151,8 @@
                     %a{:href => "/drop/map/63"}
                       %img.img-responsive.block-center{:src => kcwiki_get_thumb("MapBanner6-3.png", size: 250, protocol: "https")}
                   %div.col-xs-6.col-no-padding
-                    %img.img-responsive.block-center{:src => kcwiki_get_thumb("MapBanner0-0.png", size: 250, protocol: "https")}
+                    %a{:href => "/drop/map/64"}
+                      %img.img-responsive.block-center{:src => kcwiki_get_thumb("MapBanner6-4.png", size: 250, protocol: "https")}
             %div#area31.tab-pane
               %div.col-xs-12
                 %div.row
